testsuite/tests/module/mod116.stderr

mod116.hs:2:18: error: [GHC-76037]
    Not in scope: type constructor or class ‘M2’
